update share options

--- a/content/themes/mutiny-master/post.hbs
+++ b/content/themes/mutiny-master/post.hbs
@@ -43,8 +43,8 @@
                         onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">Twitter</a>, 
                         <a href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}"
                         onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">Facebook</a> or 
-                        <a href="https://plus.google.com/share?url={{url absolute="true"}}"
-                        onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">Google+</a></h5>
+                        <a href="https://www.linkedin.com/shareArticle?url={{url absolute="true"}}&mini=true&title={{encode title}}&summary={{url absolute="true"}}&source={{url absolute="true"}}"
+                        onclick="window.open(this.href, 'linkedin-plus-share', 'width=490,height=530');return false;">LinkedIn</a></h5>
                     </section>
                     {{#author}}
                     <footer class="clearfix" itemprop="author" itemscope itemtype="http://schema.org/Person">
